fixed blurred seatmap when scale is applied; (#9)

--- a/src/components/Seat/index.css
+++ b/src/components/Seat/index.css
@@ -122,6 +122,7 @@
   font-size: 30px;
   color: #fff;
   text-align: center;
+  z-index: 1;
 }
 
 .ST-5,
