--- a/src/components/SeatMap/index.css
+++ b/src/components/SeatMap/index.css
@@ -8,3 +8,9 @@
   font-family: sans-serif;
   font-weight: normal;
 }
+
+.jets-seat-map * {
+  filter: blur(0);
+  -webkit-filter: blur(0);
+  -webkit-font-smoothing: subpixel-antialiased;
+}
